--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "fram_base-vue",
+  "name": "portfolio",
   "version": "0.0.0",
   "scripts": {
     "dev": "vite",
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "axios": "^0.27.2",
+    "emailjs-com": "^3.2.0",
     "socket.io-client": "^4.5.0",
     "vue": "^3.2.33",
     "vue-router": "^4.0.14",
