--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview --port 5050"
+    "preview": "vite preview --port 5050",
+    "deploy":"node scripts/gh-pages-deploy.js"
   },
   "dependencies": {
     "axios": "^0.27.2",
@@ -19,6 +20,7 @@
     "autoprefixer": "^10.4.6",
     "postcss": "^8.4.13",
     "tailwindcss": "^3.0.24",
-    "vite": "^2.9.5"
+    "vite": "^2.9.5",
+    "execa": "latest"
   }
 }
